# qrcode_service

./: Cargo.toml  README.md
http/: GetQrCodePng.http  TestReq.http
src/: main.rs
