[package]
name = "qrcode_service"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
qrcode = "0.14.1"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
