[package]
name = "qrcode_service"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["json", "http1", "tokio"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22.1"
qrcode = "0.14.1"
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4.5", features = ["derive"] }
